--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,11 @@
 
     <pluginManagement>
       <plugins>
+       <plugin>
+            <groupId>org.sonarsource.scanner.maven</groupId>
+            <artifactId>sonar-maven-plugin</artifactId>
+            <version>3.4.0.905</version>
+        </plugin>
         <plugin>
           <artifactId>maven-checkstyle-plugin</artifactId>
           <version>2.8</version>
